src/HaskellParser.java
// Generated from Haskell.g4 by ANTLR 4.10.1

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HaskellParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AS=1, CASE=2, DEFAULT=3, DO=4, ELSE=5, HIDING=6, IF=7, IMPORT=8, IN=9, 
		INFIX=10, INFIXL=11, INFIXR=12, LET=13, MODULE=14, OF=15, QUALIFIED=16, 
		THEN=17, WHERE=18, WILDCARD=19, FORALL=20, FOREIGN=21, EXPORT=22, SAFE=23, 
		INTERRUPTIBLE=24, UNSAFE=25, MDO=26, FAMILY=27, ROLE=28, STDCALL=29, CCALL=30, 
		CAPI=31, CPPCALL=32, JSCALL=33, REC=34, GROUP=35, BY=36, USING=37, PATTERN=38, 
		STOCK=39, ANYCLASS=40, VIA=41, TRUE=42, FALSE=43, DATA=44, TYPE=45, CLASS=46, 
		INSTANCE=47, NEWTYPE=48, DERIVING=49, PLUS=50, MINUS=51, MULT=52, DIV=53, 
		MOD=54, EQUALS=55, NOT_EQUALS=56, LESS_THAN=57, GREATER_THAN=58, LESS_THAN_EQUAL=59, 
		GREATER_THAN_EQUAL=60, AND=61, OR=62, NOT=63, BITWISE_AND=64, VBAR=65, 
		XOR=66, ASSIGN=67, DOT=68, COLON=69, CONCAT=70, DOLLAR=71, LBRACKET=72, 
		RBRACKET=73, RANGE=74, BACKSLASH=75, LPAREN=76, RPAREN=77, COMMA=78, BACKTICK=79, 
		SEMICOLON=80, LFLOWER=81, RFLOWER=82, DOUBLEARROW=83, RARROW=84, DOUBLE_COLON=85, 
		BIND_RIGHT=86, BANG=87, HASH=88, QUESTION=89, AT=90, CARET=91, TILDE=92, 
		DEFINE=93, WS=94, NEWLINE=95, TAB=96, COMMENT=97, MULTI_LINE_COMMENT=98, 
		UID=99, ID=100, INTEGER=101, FLOAT=102, CHAR=103, STRING=104, ARROW=105;
	public static final int
		RULE_start = 0, RULE_declaration = 1, RULE_gendeclaration = 2, RULE_pat = 3, 
		RULE_pats = 4, RULE_funlhs = 5, RULE_rhs = 6, RULE_expression = 7, RULE_if_statement = 8, 
		RULE_case_statement = 9, RULE_case_alternatives = 10, RULE_case_alternative = 11, 
		RULE_do_block = 12, RULE_stmts = 13, RULE_stmt = 14, RULE_gdrhs = 15, 
		RULE_gd = 16, RULE_exp1 = 17, RULE_types = 18, RULE_type = 19, RULE_atype = 20, 
		RULE_let_statement = 21, RULE_function_application = 22, RULE_args = 23, 
		RULE_op = 24, RULE_literal = 25, RULE_type_list = 26, RULE_list_comprehensions = 27, 
		RULE_gens = 28, RULE_gen = 29, RULE_exps = 30, RULE_declarations = 31, 
		RULE_decl = 32, RULE_gendecl = 33, RULE_qvcon = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "declaration", "gendeclaration", "pat", "pats", "funlhs", "rhs", 
			"expression", "if_statement", "case_statement", "case_alternatives", 
			"case_alternative", "do_block", "stmts", "stmt", "gdrhs", "gd", "exp1", 
			"types", "type", "atype", "let_statement", "function_application", "args", 
			"op", "literal", "type_list", "list_comprehensions", "gens", "gen", "exps", 
			"declarations", "decl", "gendecl", "qvcon"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'as'", "'case'", "'default'", "'do'", "'else'", "'hiding'", "'if'", 
			"'import'", "'in'", "'infix'", "'infixl'", "'infixr'", "'let'", "'module'", 
			"'of'", "'qualified'", "'then'", "'where'", "'_'", "'forall'", "'foreign'", 
			"'export'", "'safe'", "'interruptible'", "'unsafe'", "'mdo'", "'family'", 
			"'role'", "'stdcall'", "'ccall'", "'capi'", "'cplusplus'", "'javascript'", 
			"'rec'", "'group'", "'by'", "'using'", "'pattern'", "'stock'", "'anyclass'", 
			"'via'", "'True'", "'False'", "'data'", "'type'", "'class'", "'instance'", 
			"'newtype'", "'deriving'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
			"'/='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'not'", "'&'", 
			"'|'", "'xor'", "'='", "'.'", "':'", "'++'", "'$'", "'['", "']'", "'..'", 
			"'\\'", "'('", "')'", "','", "'`'", "';'", "'{'", "'}'", "'=>'", "'<-'", 
			"'::'", "'>>='", "'!'", "'#'", "'?'", "'@'", "'^'", "'~'", "':='", null, 
			null, null, null, null, null, null, null, null, null, null, "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AS", "CASE", "DEFAULT", "DO", "ELSE", "HIDING", "IF", "IMPORT", 
			"IN", "INFIX", "INFIXL", "INFIXR", "LET", "MODULE", "OF", "QUALIFIED", 
			"THEN", "WHERE", "WILDCARD", "FORALL", "FOREIGN", "EXPORT", "SAFE", "INTERRUPTIBLE", 
			"UNSAFE", "MDO", "FAMILY", "ROLE", "STDCALL", "CCALL", "CAPI", "CPPCALL", 
			"JSCALL", "REC", "GROUP", "BY", "USING", "PATTERN", "STOCK", "ANYCLASS", 
			"VIA", "TRUE", "FALSE", "DATA", "TYPE", "CLASS", "INSTANCE", "NEWTYPE", 
			"DERIVING", "PLUS", "MINUS", "MULT", "DIV", "MOD", "EQUALS", "NOT_EQUALS", 
			"LESS_THAN", "GREATER_THAN", "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", 
			"AND", "OR", "NOT", "BITWISE_AND", "VBAR", "XOR", "ASSIGN", "DOT", "COLON", 
			"CONCAT", "DOLLAR", "LBRACKET", "RBRACKET", "RANGE", "BACKSLASH", "LPAREN", 
			"RPAREN", "COMMA", "BACKTICK", "SEMICOLON", "LFLOWER", "RFLOWER", "DOUBLEARROW", 
			"RARROW", "DOUBLE_COLON", "BIND_RIGHT", "BANG", "HASH", "QUESTION", "AT", 
			"CARET", "TILDE", "DEFINE", "WS", "NEWLINE", "TAB", "COMMENT", "MULTI_LINE_COMMENT", 
			"UID", "ID", "INTEGER", "FLOAT", "CHAR", "STRING", "ARROW"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Haskell.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HaskellParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ASTNode node;
		public DeclarationContext t1;
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaskellVisitor ) return ((HaskellVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((StartContext)_localctx).t1 = declaration();
			((StartContext)_localctx).node =  ((StartContext)_localctx).t1.node; _localctx.node.print();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public ASTNode node;
		public GendeclarationContext a;
		public FunlhsContext b;
		public RhsContext c;
		public PatContext d;
		public RhsContext e;
		public TerminalNode SEMICOLON() { return getToken(HaskellParser.SEMICOLON, 0); }
		public GendeclarationContext gendeclaration() {
			return getRuleContext(GendeclarationContext.class,0);
		}
		public FunlhsContext funlhs() {
			return getRuleContext(FunlhsContext.class,0);
		}
		public RhsContext rhs() {
			return getRuleContext(RhsContext.class,0);
		}
		public PatContext pat() {
			return getRuleContext(PatContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaskellVisitor ) return ((HaskellVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				((DeclarationContext)_localctx).a = gendeclaration();
				setState(74);
				match(SEMICOLON);
				((DeclarationContext)_localctx).node =  new DeclarationStm(((DeclarationContext)_localctx).a.node);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				((DeclarationContext)_localctx).b = funlhs();
				setState(78);
				((DeclarationContext)_localctx).c = rhs();
				((DeclarationContext)_localctx).node =  new FunctionDeclarationStm(((DeclarationContext)_localctx).b.node, ((DeclarationContext)_localctx).c.node);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				((DeclarationContext)_localctx).d = pat();
				setState(82);
				((DeclarationContext)_localctx).e = rhs();
				((DeclarationContext)_localctx).node =  new PatternDeclarationStm(((DeclarationContext)_localctx).d.node, ((DeclarationContext)_localctx).e.node);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GendeclarationContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public TypesContext a;
		public TerminalNode ID() { return getToken(HaskellParser.ID, 0); }
		public TerminalNode DOUBLE_COLON() { return getToken(HaskellParser.DOUBLE_COLON, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public GendeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gendeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).enterGendeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).exitGendeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaskellVisitor ) return ((HaskellVisitor<? extends T>)visitor).visitGendeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GendeclarationContext gendeclaration() throws RecognitionException {
		GendeclarationContext _localctx = new GendeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_gendeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((GendeclarationContext)_localctx).ID = match(ID);
			setState(88);
			match(DOUBLE_COLON);
			setState(89);
			((GendeclarationContext)_localctx).a = types();
			((GendeclarationContext)_localctx).node =  new GeneralDeclaration((((GendeclarationContext)_localctx).ID!=null?((GendeclarationContext)_localctx).ID.getText():null), ((GendeclarationContext)_localctx).a.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public Token UID;
		public LiteralContext literal;
		public TerminalNode ID() { return getToken(HaskellParser.ID, 0); }
		public TerminalNode UID() { return getToken(HaskellParser.UID, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public PatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).enterPat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).exitPat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaskellVisitor ) return ((HaskellVisitor<? extends T>)visitor).visitPat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatContext pat() throws RecognitionException {
		PatContext _localctx = new PatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pat);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				((PatContext)_localctx).ID = match(ID);
				((PatContext)_localctx).node =  new IdPat((((PatContext)_localctx).ID!=null?((PatContext)_localctx).ID.getText():null));
				}
				break;
			case UID:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				((PatContext)_localctx).UID = match(UID);
				((PatContext)_localctx).node =  new UIdPat((((PatContext)_localctx).UID!=null?((PatContext)_localctx).UID.getText():null));
				}
				break;
			case TRUE:
			case FALSE:
			case INTEGER:
			case FLOAT:
			case CHAR:
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				((PatContext)_localctx).literal = literal();
				((PatContext)_localctx).node =  ((PatContext)_localctx).literal.node;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatsContext extends ParserRuleContext {
		public ASTNode node;
		public PatContext pat;
		public PatsContext pats;
		public PatContext pat() {
			return getRuleContext(PatContext.class,0);
		}
		public PatsContext pats() {
			return getRuleContext(PatsContext.class,0);
		}
		public PatsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pats; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).enterPats(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).exitPats(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaskellVisitor ) return ((HaskellVisitor<? extends T>)visitor).visitPats(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatsContext pats() throws RecognitionException {
		PatsContext _localctx = new PatsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pats);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				((PatsContext)_localctx).pat = pat();
				setState(102);
				((PatsContext)_localctx).pats = pats();
				((PatsContext)_localctx).node =  new PatsList(((PatsContext)_localctx).pat.node, ((PatsContext)_localctx).pats.node);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				((PatsContext)_localctx).pat = pat();
				((PatsContext)_localctx).node =  new SinglePat(((PatsContext)_localctx).pat.node);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunlhsContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public PatsContext pats;
		public TerminalNode ID() { return getToken(HaskellParser.ID, 0); }
		public PatsContext pats() {
			return getRuleContext(PatsContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(HaskellParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(HaskellParser.RPAREN, 0); }
		public FunlhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funlhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).enterFunlhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HaskellListener ) ((HaskellListener)listener).exitFunlhs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HaskellVisitor ) return ((HaskellVisitor<? extends T>)visitor).visitFunlhs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunlhsContext funlhs() throws RecognitionException {
		FunlhsContext _localctx = new FunlhsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funlhs);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				((FunlhsContext)_localctx).ID = match(ID);
				setState(111);
				((FunlhsContext)_localctx).pats = pats();
				((FunlhsContext)_localctx).node =  new FunLhsClass((((FunlhsContext)_localctx).ID!=null?((FunlhsContext)_localctx).ID.getText():null), ((FunlhsContext)_localctx).pats.node);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				((FunlhsContext)_localctx).ID = match(ID);
				setState(115);
				match(LPAREN);
				setState(116);
				((FunlhsContext)_localctx).pats = pats();
				setState(117);
				match(RPAREN);
				((FunlhsContext)_localctx).node =  new ParenFunLhs((((FunlhsContext)_localctx).ID!=null?((FunlhsContext)_localctx).ID.getText():null), ((FunlhsContext)_localctx).pats.node);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
